--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     RC
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item text-success" href="slideapplyrc.html">New Vehicle Registration</a></li>
+                    <li><a class="dropdown-item text-success" href="index.html">New Vehicle Registration</a></li>
                     <li><a class="dropdown-item text-success" href="sliderc.html">List of RCs</a></li>
                   </ul>
               </li>
@@ -66,46 +66,33 @@
       <br>
       <form>
         <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
-        <input type="text" class="form-control" placeholder=" Enter name" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Enter DOB</span>
-        <input type="text" class="form-control" placeholder="Enter your Date of Birth" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Relationship</span>
-        <input type="text" class="form-control" placeholder="Enter your relationship status" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <span class="input-group-text" id="inputGroup-sizing-default">Owner Name</span>
+        <input type="text" class="form-control" placeholder ="Enter Owner Name"aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Address</span>
         <input type="text" class="form-control" placeholder="Enter your Address" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Category</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <span class="input-group-text" id="inputGroup-sizing-default">Vehicle class</span>
+        <input type="text" class="form-control" placeholder="Enter Vehicle class" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
-        <div class="col-md-3">
-        <label for="validationCustom04" class="form-label">Mandal</label>
-        <select class="form-select" id="validationCustom04" required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
-        </select>
-        <div class="invalid-feedback">
-          Please select a valid mandal.
+        <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Engine Number</span>
+        <input type="text" class="form-control" placeholder="Enter Engine Number"aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
+        <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Fuel used</span>
+        <input type="text" class="form-control" placeholder= "Enter Fuel Type" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
-        <div class="col-md-3">
-        <label for="validationCustom04" class="form-label">District</label>
-        <select class="form-select" id="validationCustom04" required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
-        </select>
-        <div class="invalid-feedback">
-          Please select a valid district.
+        <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Vehicle Class</span>
+        <input type="text" class="form-control" placeholder = "Enter Vehicle class" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
+        <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Vehicle colour</span>
+        <input type="text" class="form-control" placeholder="Entery Vehicle colour" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
-        <br>
         <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupFile01">Upload Aadhar</label>
         <input type="file" class="form-control" id="inputGroupFile01">
@@ -115,10 +102,9 @@
         <input type="file" class="form-control" id="inputGroupFile01">
         </div>
         <div class="d-grid gap-2 col-6 mx-auto">
-           <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+       </div>
       </form>
-      <br>
       <br>
       <br>
       <footer class="text-white text-center text-lg-start fixed-bottom mt-auto" style="background-color: #008374;">
@@ -139,8 +125,5 @@
           <a class="text-white" href="#!">projectkmit</a>
         </div>
       </footer>
-    <br>
-    <br>
-    <br>
   </body>
 </html>
